syntax = "proto3";

package server;
option go_package = ".;main";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
  int32 sleep_sec = 2;
}

message HelloReply {
  string message = 1;
  string hostname = 2;
  int64 timestamp = 3;
}
